# 2DQR-using-ABC

./: .clangd  .gitignore  CMakeLists.txt  README.md
inc/2dqr/: twoDQR.hpp
inc/2dqr_ext/: twoDQR_ext.hpp
inc/abc_wrapper/: abc_wrapper.hpp
inc/algorithm_base/: algorithm_base.hpp
inc/common/: dqcir.fwd.hpp  dqcir.hpp  dqcir_ext.fwd.hpp  dqcir_ext.hpp  dqdimacs.fwd.hpp  dqdimacs.hpp  verilog.hpp
src/: main.cpp  verifier.cpp
src/2dqr/: reduction.cpp  refine_and_patch.cpp
src/2dqr_ext/: reduction.cpp  refine_and_patch.cpp
src/abc_wrapper/: abc_wrapper.cpp
src/algorithm_base/: algorithm_base.cpp
src/common/: dqcir.cpp  dqcir_ext.cpp  dqcir_ext_from_dimacs.cpp  dqcir_ext_optimize.cpp  dqcir_ext_parser.cpp  dqcir_from_dimacs.cpp  dqcir_from_dqcir_ext.cpp  dqcir_parser.cpp  dqdimacs.cpp  dqdimacs_from_dqcir.cpp  dqdimacs_from_dqcir_ext.cpp  dqdimacs_parser.cpp  verilog.cpp  verilog_from_file.cpp
